RESOLVED FIXED Bug 199818
IndexedDB: error in starting version change transaction may be neglected
https://bugs.webkit.org/show_bug.cgi?id=199818
Summary IndexedDB: error in starting version change transaction may be neglected
Sihui Liu
Reported 2019-07-15 17:34:17 PDT
For version change transaction, IDBServer doesn't wait the result of beginTransaction from the background thread before giving the IDBClient the result of open request. In this case, we could fail to update version number of IDBDatabaseInfo.
Attachments
Patch (10.05 KB, patch)
2019-07-15 17:57 PDT, Sihui Liu
no flags
Archive of layout-test-results from ews101 for mac-highsierra (3.19 MB, application/zip)
2019-07-15 19:13 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews104 for mac-highsierra-wk2 (2.90 MB, application/zip)
2019-07-15 19:21 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews112 for mac-highsierra (2.86 MB, application/zip)
2019-07-15 19:33 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (2.81 MB, application/zip)
2019-07-15 19:58 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews210 for win-future (14.00 MB, application/zip)
2019-07-15 21:32 PDT, EWS Watchlist
no flags
Patch (6.66 KB, patch)
2019-07-16 15:29 PDT, Sihui Liu
no flags
Patch for landing (6.89 KB, patch)
2019-07-17 10:07 PDT, Sihui Liu
no flags
Patch (7.55 KB, patch)
2019-07-18 17:10 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2019-07-15 17:57:41 PDT
EWS Watchlist
Comment 2 2019-07-15 19:13:06 PDT
Comment on attachment 374175 [details] Patch Attachment 374175 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/12746993 New failing tests: storage/indexeddb/intversion-long-queue-private.html storage/indexeddb/intversion-long-queue.html
EWS Watchlist
Comment 3 2019-07-15 19:13:07 PDT
Created attachment 374181 [details] Archive of layout-test-results from ews101 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 4 2019-07-15 19:21:34 PDT
Comment on attachment 374175 [details] Patch Attachment 374175 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/12747000 New failing tests: storage/indexeddb/intversion-long-queue-private.html storage/indexeddb/intversion-long-queue.html
EWS Watchlist
Comment 5 2019-07-15 19:21:36 PDT
Created attachment 374182 [details] Archive of layout-test-results from ews104 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 6 2019-07-15 19:33:24 PDT
Comment on attachment 374175 [details] Patch Attachment 374175 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/12746908 New failing tests: storage/indexeddb/intversion-long-queue-private.html storage/indexeddb/intversion-long-queue.html
EWS Watchlist
Comment 7 2019-07-15 19:33:26 PDT
Created attachment 374183 [details] Archive of layout-test-results from ews112 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 8 2019-07-15 19:58:11 PDT
Comment on attachment 374175 [details] Patch Attachment 374175 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/12747052 New failing tests: storage/indexeddb/intversion-long-queue-private.html storage/indexeddb/intversion-long-queue.html
EWS Watchlist
Comment 9 2019-07-15 19:58:13 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 10 2019-07-15 21:32:12 PDT
Comment on attachment 374175 [details] Patch Attachment 374175 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/12747715 New failing tests: storage/indexeddb/intversion-long-queue-private.html storage/indexeddb/intversion-long-queue.html
EWS Watchlist
Comment 11 2019-07-15 21:32:14 PDT
Created attachment 374191 [details] Archive of layout-test-results from ews210 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews210 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Sihui Liu
Comment 12 2019-07-16 15:29:10 PDT
Brady Eidson
Comment 13 2019-07-16 16:28:57 PDT
Comment on attachment 374250 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=374250&action=review > Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.cpp:655 > + auto operation = WTFMove(m_currentOpenDBRequest); If you make an `IDBResultData result` after 655... > Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.cpp:661 > + operation->connection().didOpenDatabase(result); This line and 666 are the same, can be moved out if we make a result variable before the if > Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.cpp:666 > + operation->connection().didOpenDatabase(result); This line and 661 are the same, can be moved out if we make a result variable before the if
Sihui Liu
Comment 14 2019-07-16 16:51:51 PDT
Sihui Liu
Comment 15 2019-07-17 10:07:36 PDT
Created attachment 374304 [details] Patch for landing
WebKit Commit Bot
Comment 16 2019-07-17 13:27:36 PDT
Comment on attachment 374304 [details] Patch for landing Clearing flags on attachment: 374304 Committed r247531: <https://trac.webkit.org/changeset/247531>
WebKit Commit Bot
Comment 17 2019-07-17 13:27:38 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 18 2019-07-18 16:31:43 PDT
Reverted r247531 for reason: Caused multiple IndexedDB layout test crashes. Committed r247624: <https://trac.webkit.org/changeset/247624>
Sihui Liu
Comment 19 2019-07-18 17:10:12 PDT
WebKit Commit Bot
Comment 20 2019-07-19 11:06:15 PDT
Comment on attachment 374431 [details] Patch Clearing flags on attachment: 374431 Committed r247649: <https://trac.webkit.org/changeset/247649>
WebKit Commit Bot
Comment 21 2019-07-19 11:06:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.